new layout from bold website, improving ui and ux, adding instructions to add the cron, creating folder to the script files

--- a/.env
+++ b/.env
@@ -10,14 +10,14 @@ DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=bold_reviews
-DB_USERNAME=bold
+DB_USERNAME=root
 DB_PASSWORD=builders
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=database
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
